# Determinant-Eval

./: CMakeLists.txt  main.c  matrix.c  matrix.h
